2006-10-03  Akim Demaille  <!!! EMAIL not set !!!>

	Fixes and style.
	* src/examples/urbiimage.cpp: Fix an AND that was an OR.
	Use switch.
	* src/examples/monitor.cpp: Use C++ headers.
	Simplify writing.
	Formatting changes.
	* src/examples/monitor-win.h: Formatting changes.
	* src/examples/monitor.h: Idem.

2006-10-02  matthieu nottale  <nottale@gostai.com>

	Umake quoting fix.

	* sdk/umake-engine: Add correct quoting.
	* sdk/umake.in: Quote everything properly.

2006-10-02  matthieu nottale  <nottale@gostai.com>

	Umake feature 

	* sdk/umake.in: When no option other than those of form "a=b" is passed, add '.' as directory to scan.

2006-10-02  matthieu nottale  <nottale@gostai.com>

	Fix umake parameters containing spaces.

	* sdk/umake.in: Add eval to the make invocation line and quote parameters in arg parsing.
	* src/examples/Makefile.am: Move -lX11 LDFLAGS in the 'if !WINDOWS' case .

2006-09-29  Matthieu Nottale  <nottale@gostai.com>

	umake fix

	* sdk/umake.in: Fix typo in doc .
	* sdk/Makefile.am: Fix srcdir/builddir path problems.
	* sdk/param.mk.in: Fix LIBRARIES=>LIBS as sent by umake. Fix OBJECTS=>LTOBJECT

2006-09-29  matthieu nottale  <nottale@gostai.com>

	umake fixes

	* sdk/umake-engine: New.
	* sdk/umake-lib: New.
	* sdk/install: New. Install script, required if sdk must be relocated
	* sdk/umake.in: Default core is now HARDCODED to 'remote'. Pass prefix to param.mk, so it can be location-independant.
	* sdk/Makefile.am: Install install.
	* sdk/param.mk.in: Remove ref to prefix.
	* src/liburbi/Makefile.am: Add correct libjpegx to libkernel so that libjpeg is linked in the lib.
	* lib/jpeg-6b/Makefile.am: libjpegx.la is built, as a noninstallable conveninance lib.

2006-09-28  matthieu nottale  <nottale@gostai.com>

	Umake improvments

	* sdk/umake.in: Defaults link with default core (according to jcb spec). Option -l produces only a library. Default target name depends on host and core.